PLANET-7242: Fix title text covered by background (#1111)
Ref: https://jira.greenpeace.org/browse/PLANET-7242

--- a/assets/src/styles/blocks/PageHeader.scss
+++ b/assets/src/styles/blocks/PageHeader.scss
@@ -62,8 +62,7 @@ $text-column-padding-in: 24px;
     padding: 0;
     font-size: inherit;
     font-weight: inherit;
-    line-height: inherit;
-
+    line-height: var(--page-header-title--line-height, 1em);
     box-decoration-break: clone;
     box-shadow: 8px 0 0 var(--transparent-button--active--color, #fff), calc(8px * -1) 0 0 var(--transparent-button--active--color, #fff);
   }
